--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -16,20 +16,19 @@
         <path d="m223.5 32c-123.5 0-223.5 100.3-223.5 224s100 224 223.5 224c60.6 0 115.5-24.2 155.8-63.4 5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6-96.9 0-175.5-78.8-175.5-176 0-65.8 36-123.1 89.3-153.3 6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"></path>
       </svg>
     </span>   
-    <input type="checkbox" class="input" (change)="claroOscuro()">
+    <input type="checkbox" class="input" [checked]="isOscuro" (change)="claroOscuro()" />
     <span class="slider"></span>
   </label>
   <div class="BienvenidaTXT">Bienvenido a RegistrAPP</div>
 
   <div class="FormularioLogin">
     <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)" class="FormularioLogin">
-      <div class="FormularioLogin">
-        <input type="text" placeholder="Correo Institucional" ngModel name="email" required email />
-        <input type="password" placeholder="Contraseña" ngModel name="password" required minlength="6" />
-        <input type="password" placeholder="Confirmar Contraseña" ngModel name="confirmPassword" required minlength="6" />
-      </div>
-      
-      <ion-item class="alumnoprofesor">
+      <input type="text" placeholder="Ingrese su nombre" ngModel name="nombre" required />
+      <input type="email" placeholder="Correo Institucional" ngModel name="email" required email />
+      <input type="password" placeholder="Contraseña" ngModel name="password" required minlength="6" />
+      <input type="password" placeholder="Confirmar Contraseña" ngModel name="confirmPassword" required minlength="6" />
+
+      <ion-item class="alumnoprofesor"> 
         <ion-label>Tipo de Usuario</ion-label>
         <ion-radio-group [(ngModel)]="tipoUsuario" (ionChange)="onUserTypeChange($event)" name="userType" required>
           <ion-item class="alumnoprofesor">
@@ -43,25 +42,18 @@
         </ion-radio-group>
       </ion-item>
 
-      <div *ngIf="tipoUsuario === 'profesor'" class="FormularioLogin">
-        <input type="text" id="codigoProfesor" name="codigoProfesor" placeholder="Código Profesor" ngModel required minlength="5" />
+      <div *ngIf="tipoUsuario === 'profesor'">
+        <input type="text" id="codigoProfesor" name="codigoProfesor" placeholder="Código Profesor" ngModel required minlength="1" />
       </div>
-
-      <div class="wrapper">
-        <div 
-          class="ion-activatable ripple-parent custom-parent"
-          [class.disabled]="!registerForm.valid || isSubmitting"
-          (click)="onSubmit(registerForm)"
-        >
-          Registrarse
-          <ion-ripple-effect></ion-ripple-effect>
-        </div>
-      </div>
+          <button type="submit" class="wrapper">
+            Registrarse
+          </button>
     </form>
+    
   </div>
 
   <div class="nuevousuario">
-    <h6>Ya tienes cuenta? <a [routerLink]="['/login']">Inicia Sesión</a></h6>
+    <h6>¿Ya tienes cuenta? <a [routerLink]="['/login']">Inicia Sesión</a></h6>
   </div>
   <div class="lineadivisora"></div>
   <div class="redesiniciosesion">
