--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -24,7 +24,7 @@
   <div class="BienvenidaTXT">Bienvenido De Vuelta!</div>
 
   <div class="FormularioLogin">
-    <form (ngSubmit)="login()" #loginForm="ngForm" class="FormularioLogin">
+    <form (ngSubmit)="login()"  class="FormularioLogin" #loginForm="ngForm" >
       <input
         type="text"
         placeholder="Correo Institucional"
